added local Stratagy passport auth

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         <ul>
             <li class="user"> <%= user.name || user.username || user.email %></li>
             <li>
-                <form action="/logout" method="post">
+                <form action="/logout" method="get">
                     <button class="logout" type="'submit">Sign out</button>
                 </form>
             </li>
