--- a/views/error.ejs
+++ b/views/error.ejs
@@ -17,7 +17,7 @@
     <section>
         <h2 class="alert"><%= message %></h2>
         <hr>
-        <a class="button" href="login">Sign in</a>
+        <a class="button" href="/login">Sign in</a>
     </section>
 </section>
 <footer class="info">
